<resources>
    <string name="app_name">InvestIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_next_slide">Go to Next Slide</string>
    <string name="business_owner">Business Owner</string>
    <string name="investor">Investor</string>
    <string name="choose_a_role_for_you">Choose a role for you.</string>
    <string name="first_onboarding_image">First OnBoarding Image</string>
    <string name="second_onboarding_image">Second OnBoarding Image</string>
    <string name="third_onboarding_image">Third OnBoarding Image</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="arrow_up">Arrow Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="retry">Try Again</string>
    <string name="title_first_onboarding">No worry, bangun ide dan inovasimu dari nol.</string>
    <string name="title_second_onboarding">Pupuk relasi dengan calon investor.</string>
    <string name="title_third_onboarding">Tingkatkan prestasi dan reputasi bisnismu.</string>
    <string name="avatar_of_user">Avatar of User</string>
    <string name="placeholder_for_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam leo nunc dolor lorem pretium amet. Sit ettttttttttttttt nec scelerisque pellentesque sit porttitor blandit risus.</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="create_post">Create a Post</string>
    <string name="user_image">User Image</string>
    <string name="post">Post</string>
    <string name="password_hint_text">Password minimal terdiri dari 8 karakter.</string>
    <string name="whats_up_with_your_business">What’s up with your business?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_financial_data">Edit Financial Data</string>
    <string name="logout_question">Do you want to logout?</string>
    <string name="cancel_text">Cancel</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="sg_amp_a_expenses"><![CDATA[SG&A Expenses]]></string>
    <string name="r_amp_d_expenses"><![CDATA[R&D Expenses]]></string>
    <string name="debt_to_assets">Debt to Assets</string>
    <string name="interest_expense">Interest Expense</string>
    <string name="expenses">Expenses</string>
    <string name="revenue">Revenue</string>
    <string name="assets_turnover">Assets Turnover</string>
    <string name="net_income">Net Income</string>
    <string name="intangibles_to_total_assets">Intangibles to Total Assets</string>
    <string name="gross_margin">Gross Margin</string>
    <string name="gross_profit_growth">Gross Profit Growth</string>
    <string name="profit">Profit</string>
    <string name="location">Location</string>
    <string name="linkedin">Linkedin</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="desc_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis interdum quis vel adipiscing magna. Viverra diam enim natoque, mauris sed nec aenean. Diam consequat non.</string>
    <string name="invest">Invest</string>
    <string name="image_preview">Image preview before uploaded.</string>
    <string name="desc_first_onboarding">Sudah menjadi visi kami menjadi support nomor satu dalam merealisasikan ide bisnismu.</string>
    <string name="desc_third_onboarding">Perjalananmu gak sebatas itu aja, kami punya segudang program pengembangan bisnis untukmu.</string>
    <string name="desc_second_onboarding">Tak perlu khawatir kekurangan dana, kami punya daftar investor yang siap berinvestasi untuk bisnismu.</string>
</resources>